	- Railguns with infinite ammo. One shot, one kill.
	- Ponies are dismembered on death when when gore is enabled on the client.
	- Ponies cannot pick up weapons or items.

- Added Linux support. (Thank you to Cyanide for help with this :D) (TODO: RECOMPILE AFTER UPDATE)
	- Compiled under WSL Ubuntu. Tested under Pop_OS (Ubuntu).
	- Known issues: Some sounds may not load properly.

- A model preview will now appear in the customization panel when you join or host a game.

Bug Fixes:
- Fixed custom weapons not being given with "impulse 101".
- Fixed some gore effects not working when gore is enabled.
- Fixed a bug where the viewmodel wouldn't hide when zooming at high FOVs.

Misc. Changes:
- Moved the gamemode-related options to near the basic server settings.
- Set the default FOV to 90.

Release 1.0 (Released 4-11-21):
Mane changes:
- The Railgun now recharges in the background. You will know when it's ready after a beep plays.
	- The Railgun will charge faster than normal if the Railgun is charging in the background. This does not apply if the Railgun is overcharged.
- It is now much easier to aim with the Railgun. The crosshair is now enabled and the beam points towards the crosshair.
- Moved the positioning of the Railgun in dm_aerowalk.
- Moved the positioning of the Gatling Gun in dm_runoff.

Bug Fixes:
- Fixed a bug where the Railgun doesn't play a sound at 100% completion.
- Fixed a bug where unlocalized text in the Customization menu becomes jarbled.

Balance Tweaks:
- Decreased the Railgun's normal charge time by up to 31%.
- Decreased the Railgun's overcharge charge time by up to 33%.
- The Railgun now fires invisible bullets, allowing for better support with map triggers.

Misc. Changes:
- Changed the bot name randomization algorithm to be more unique.

Beta 2 (Released 03-07-21):
Mane changes:
- Added an additional boost when rocket/grenade jumping.
- Added proper bindings for the Gatling Gun and the Railgun.
- Added a timer for games with a time limit.