@@ -749,12 +749,12 @@
 	}
 	"PonyModelPanel"
 	{
-		"ControlName"		"CBaseModelPanel"
+		"ControlName"		"CAdvModelPanel"
 		"fieldName"		"PonyModelPanel"
-		"xpos"		"447"
-		"ypos"		"43"
-		"wide"		"350"
-		"tall"		"350"
+		"xpos"		"248"
+		"ypos"		"40"
+		"wide"		"160"
+		"tall"		"160"
 		"autoResize"		"0"
 		"pinCorner"		"0"
 		"RoundedCorners"		"15"
@@ -764,57 +764,35 @@
 		"enabled"		"1"
 		"tabPosition"		"0"
 		
+		"fov"			"54"
+		"allow_rot"	"1"
+		
 		"model"
 		{
+			"force_pos"	"1"
 			"spotlight"	"1"
 			"modelname"	"models/ppm/player_default_base_new_pantoneshift.mdl"
 			"skin"		"3"
-			"origin_z"	"-35"
-			"origin_y"	"0"
-			"origin_x"	"130"
+			"angles_x" "0"
 			"angles_y"	"-215"
+			"angles_z" "0"
+			"origin_z"	"-28"
+			"origin_y"	"0"
+			"origin_x"	"75"
+			"frame_origin_x"	"0"
+			"frame_origin_y"	"0"
+			"frame_origin_z"	"0"
 
 			"animation"
 			{
+				"name"		"Default"
 				"sequence"	"run_mp_all"
 				"pose_parameters"
 				{
 					"move_x" "1.0"
 				}
 			}
-
-			"attached_model"
-			{
-				"modelname" "models/weapons/w_crowbar.mdl"
-			}
 		}
-	}
-	"MissingPlayerLabel"
-	{
-		"ControlName"		"Label"
-		"fieldName"		"MissingPlayerLabel"
-		"xpos"		"478"
-		"ypos"		"63"
-		"wide"		"300"
-		"tall"		"300"
-		"autoResize"		"0"
-		"pinCorner"		"0"
-		"RoundedCorners"		"15"
-		"pin_corner_to_sibling"		"0"
-		"pin_to_sibling_corner"		"0"
-		"visible"		"1"
-		"enabled"		"1"
-		"tabPosition"		"0"
-		"labelText"		"#PoneDM_MissingPlayer"
-		"textAlignment"		"center"
-		"dulltext"		"0"
-		"brighttext"		"0"
-		"wrap"		"1"
-		"centerwrap"		"0"
-		"textinsetx"		"0"
-		"textinsety"		"0"
-		"auto_wide_tocontents"		"0"
-		"use_proportional_insets"		"0"
 	}
 	"PrimaryLabel"
 	{
@@ -1014,6 +992,33 @@
 		"tabPosition"		"0"
 		"labelText"		"#PoneDM_Tail"
 		"textAlignment"		"west"
+		"dulltext"		"0"
+		"brighttext"		"0"
+		"wrap"		"0"
+		"centerwrap"		"0"
+		"textinsetx"		"0"
+		"textinsety"		"0"
+		"auto_wide_tocontents"		"0"
+		"use_proportional_insets"		"0"
+	}
+	"PreviewLabel"
+	{
+		"ControlName"		"Label"
+		"fieldName"		"PreviewLabel"
+		"xpos"		"589"
+		"ypos"		"49"
+		"wide"		"64"
+		"tall"		"24"
+		"autoResize"		"0"
+		"pinCorner"		"0"
+		"RoundedCorners"		"15"
+		"pin_corner_to_sibling"		"0"
+		"pin_to_sibling_corner"		"0"
+		"visible"		"1"
+		"enabled"		"1"
+		"tabPosition"		"0"
+		"labelText"		"#PoneDM_ModelPreview"
+		"textAlignment"		"center"
 		"dulltext"		"0"
 		"brighttext"		"0"
 		"wrap"		"0"
