@@ -1,27 +1,0 @@
-"PonyView"
-{
-	"model"
-	{
-		"spotlight"	"1"
-		"modelname"	"models/ppm/player_default_base_new_pantoneshift.mdl"
-		"skin"		"3"
-		"origin_z"	"-25"
-		"origin_y"	"-10"
-		"origin_x"	"90"
-		"angles_y"	"-215"
-
-		"animation"
-		{
-			"sequence"	"run_mp_all"
-			"pose_parameters"
-			{
-				"move_x" "1.0"
-			}
-		}
-
-		"attached_model"
-		{
-			"modelname" "models/weapons/w_crowbar.mdl"
-		}
-	}
-}
