@@ -52,6 +52,8 @@ $Project "Client (PoneDM)"
 				$File	"ponedm\gameui\EngineInterface.h"
 				$File	"ponedm\gameui\PlayerColorDialog.cpp"
 				$File	"ponedm\gameui\PlayerColorDialog.h"
+				$File	"ponedm\gameui\advmodelpanel.cpp"
+				$File	"ponedm\gameui\advmodelpanel.h"
 			}
 			
 			$File	"ponedm\hud_timer.cpp"
