@@ -9,7 +9,8 @@ Mane changes:
 	- Compiled under WSL Ubuntu. Tested under Pop_OS (Ubuntu).
 	- Known issues: Some sounds may not load properly.
 
-- A model preview will now appear in the customization panel when you join or host a game.
+- A model preview will now appear in the customization panel!
+	- Press and hold the left mouse button to rotate.
 
 Bug Fixes:
 - Fixed custom weapons not being given with "impulse 101".
